# raylib-demo

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
assets/: assets
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docker/: Dockerfile  build.sh
source/: lib.cpp
source/core/: TextureAtlas.cpp  TextureAtlas.h
source/game/: main.cpp
test/: CMakeLists.txt
test/source/: raylib-demo_test.cpp
